# AIChat_Public

./: .gitignore  AmazonQ.md  Cargo.toml  README.md
src/: gemini_client.rs  main.rs
src/cli/chat/: command.rs  context.rs  conversation_state.rs  input_source.rs  mod.rs  parse.rs  prompt.rs
src/cli/chat/tools/: execute_bash.rs  fs_read.rs  fs_write.rs  mod.rs  use_aws.rs
