[package]
name = "gemini-chat-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI chat application using Google's Gemini 2.0 Flash API"
authors = ["Your Name"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "=0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "=10.1.1"
crossterm = "0.26"
regex = "1.9"
dirs = "3.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
color-print = "0.3"
winnow = "0.4"
chrono = "0.4"

[dependencies.url]
version = "=2.4.1"
